@@ -2,3 +2,5 @@
 *.o
 *~
 gtk3-nocsd
+testlibs/
+test-static-tls
